<resources>
    // Toolbar title
    <string name="app_name">ShareIng</string>
    <string name="text_title_add">Add new ingredient</string>
    <string name="text_title_detail">Ingredient detail</string>

    // Side Menu
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="text_menu_filter_with_conditions">Filter with conditions</string>
    <string name="text_menu_favorite_sharer">Favorite sharer</string>
    <string name="text_menu_login">Log in</string>
    <string name="text_menu_logout">Log out</string>

    // Add Selling Activity
    <string name="text_add_title_ingredient">Ingredient :</string>
    <string name="text_add_title_measure">Measurement :</string>
    <string name="text_add_title_unit">Unit :</string>
    <string name="text_add_title_price">Price : S$</string>
    <string name="text_btn_add">Add</string>

    // Solding Detail Activity
    <string name="text_detail_ingredient_title">Ingredient :</string>
    <string name="text_detail_amount_title">Amount :</string>
    <string name="text_detail_price_title">Price :</string>
    <string name="text_detail_provider_title">Provider :</string>
    <string name="text_detail_phone_title">Phone :</string>

    // Filter Activity
    <string name="text_filter_clear_all">clear all</string>
    <string name="text_filter_select_all">select all</string>

    // Sign Up Dialog
    <string name="text_sign_up_title">As first time user, \nplease enter your contact information</string>
    <string name="text_sign_up_name">Display Name:</string>
    <string name="text_sign_up_phone">Contact Number :</string>
    <string name="text_sign_up_ok">OK</string>

    <string name="location_cover_fragment">To use this product, please turn on your location service. </string>
</resources>
