<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.AddSellingActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideline_field_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideline_field_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

    <TextView
            android:id="@+id/tv_title_ingredient"
            style="@style/adding_title"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/guideline_field_start"
            android:text="@string/text_add_title_ingredient"/>

    <Spinner
            android:id="@+id/spinner_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_title_ingredient"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_ingredient"
            app:layout_constraintStart_toEndOf="@id/tv_title_ingredient"
            app:layout_constraintEnd_toEndOf="@id/guideline_field_end"
            android:layout_marginStart="12dp"/>

    <TextView
            android:id="@+id/tv_title_measure"
            style="@style/adding_title"
            app:layout_constraintStart_toStartOf="@id/guideline_field_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title_ingredient"
            android:text="@string/text_add_title_measure"/>

    <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_title_measure"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_measure"
            app:layout_constraintStart_toEndOf="@id/tv_title_measure"
            android:layout_marginStart="8dp"
            android:inputType="numberDecimal"/>

    <TextView
            android:id="@+id/tv_title_unit"
            style="@style/adding_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title_measure"
            app:layout_constraintStart_toStartOf="@id/guideline_field_start"
            android:text="@string/text_add_title_unit"/>

    <Spinner
            android:id="@+id/spinner_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_title_unit"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_unit"
            app:layout_constraintStart_toEndOf="@id/tv_title_unit"
            android:layout_marginStart="12dp"/>

    <TextView
            android:id="@+id/tv_title_price"
            style="@style/adding_title"
            app:layout_constraintStart_toStartOf="@id/guideline_field_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title_unit"
            android:text="@string/text_add_title_price"/>

    <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_title_price"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_price"
            app:layout_constraintStart_toEndOf="@id/tv_title_price"
            android:layout_marginStart="8dp"
            android:inputType="numberDecimal"/>


</android.support.constraint.ConstraintLayout>