<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

        <TextView
                android:id="@+id/tv_title_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/text_sign_up_title"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="8dp"
                android:background="@color/colorPrimary"
                android:lines="2"/>

        <!--<TextView-->
        <!--android:id="@+id/tv_title_sign_up_name"-->
        <!--style="@style/app_title"-->
        <!--android:text="@string/text_sign_up_name"-->
        <!--app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--android:textSize="14sp"-->
        <!--android:layout_marginStart="6dp"/>-->

        <!--<EditText-->
        <!--android:id="@+id/et_sign_up_name"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up_name"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:inputType="text"-->
        <!--android:textSize="14sp"/>-->

        <android.support.design.widget.TextInputLayout
                android:id="@+id/TILayout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp">
            <EditText
                    android:id="@+id/et_sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/text_sign_up_name"
                    android:inputType="text"
                    android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/TILayout_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/TILayout_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp">
            <EditText
                    android:id="@+id/et_sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/text_sign_up_phone"
                    android:inputType="phone"
                    android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>
        <!--<TextView-->
        <!--android:id="@+id/tv_title_sign_up_phone"-->
        <!--style="@style/app_title"-->
        <!--android:text="@string/text_sign_up_phone"-->
        <!--app:layout_constraintTop_toBottomOf="@id/et_sign_up_name"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--android:textSize="14sp"-->
        <!--android:layout_marginStart="6dp"/>-->

        <!--<EditText-->
        <!--android:id="@+id/et_sign_up_phone"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up_phone"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:inputType="phone"-->
        <!--android:textSize="14sp"/>-->

        <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/TILayout_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/text_sign_up_ok"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>